# MRP_System

./: ERP_System_versions.tar  LLM_readme.md  Not_assigned_SO.xlsx  README.md  To_Do.md  open_po_ledger_pod_undercount.md  requirements.txt
ERP_System 1.0/: ERP_Dashboard - Copy.ipynb  ERP_System - Copy.ipynb  config - Copy.py  etl - Copy.py
ERP_System 2.0/: SKILL.md  assignment_readiness.py  atp.py  config - Copy.py  config.py  core - Copy.py  core.py  db_config - Copy.py  db_config.py  erp - Copy.bat  (+13 more)
ERP_System 3.0/: .env.example  README.md  pyproject.toml
ERP_System 3.0/.etl_state/: last_violation_report.csv
ERP_System 3.0/erp_system/: Debug.ipynb  llm_backend.py
ERP_System 3.0/erp_system/cli/: etl.py  llm_cli.py  update_pod_site.py
ERP_System 3.0/erp_system/contracts/: __init__.py  schemas.py
ERP_System 3.0/erp_system/ingest/: __init__.py  _helpers.py  _legacy_io_ops.py  io_ops.py  sources.py
ERP_System 3.0/erp_system/ledger/: __init__.py  _legacy.py  assignment_readiness.py  events.py  ledger.py
ERP_System 3.0/erp_system/normalize/: __init__.py  erp_normalize.py
ERP_System 3.0/erp_system/runtime/: __init__.py  config.py  constants.py  db_config.py  paths.py  policies.py
ERP_System 3.0/erp_system/transform/: __init__.py  _legacy_core.py  common.py  inventory.py  pod.py  sales_order.py  shipping.py  structured.py
ERP_System 3.0/reports/: .last_violation_report.csv
ERP_System 3.0/tests/: test_assignment_readiness.py  test_contracts_schema_validation.py  test_ledger_so_bundle_split.py  test_runtime_paths.py  test_shipping_parse_description.py
(+52 files in other folders)
